crates/stef-compiler/tests/inputs/validate/enum_unnamed_tuple_single.stef
enum Sample {
    One @1,
    Two((u8) @1) @2,
}
