crates/stef-compiler/tests/inputs/invalid/enum_unnamed_dup_id.stef
enum Sample {
    One @1,
    Two(string @1, string @1) @2,
}
